@@ -91,8 +91,10 @@ enum line_type {
 };
 
 struct line_info {
-	const char *name;	/* Option name. */
-	int namelen;		/* Size of option name. */
+	const char *prefix;	/* Prefix. */
+	int prefixlen;		/* Size of prefix. */
+	const char *name;	/* Color name. */
+	int namelen;		/* Size of color name. */
 	const char *line;	/* The start of line to match. */
 	int linelen;		/* Size of string to match. */
 	int fg, bg, attr;	/* Color and text attributes for the lines. */
@@ -102,24 +104,25 @@ struct line_info {
 enum line_type get_line_type(const char *line);
 enum line_type get_line_type_from_ref(const struct ref *ref);
 
-struct line_info *get_line_info(enum line_type type);
-struct line_info *find_line_info(const char *name, size_t namelen, bool line_only);
-struct line_info *add_custom_color(const char *quoted_line);
+struct line_info *get_line_info(const char *prefix, enum line_type type);
+struct line_info *find_line_info(const char *prefix, const char *name, size_t namelen, bool line_only);
+struct line_info *add_line_info(const char *prefix, const char *name, size_t namelen, const char *line, size_t linelen);
+struct line_info *add_custom_color(const char *prefix, const char *quoted_line);
 void init_colors(void);
 
 /* Color IDs must be 1 or higher. [GH #15] */
 #define COLOR_ID(line_type)		((line_type) + 1)
 
 static inline int
-get_line_color(enum line_type type)
+get_line_color(const char *prefix, enum line_type type)
 {
-	return COLOR_ID(get_line_info(type)->color_pair);
+	return COLOR_ID(get_line_info(prefix, type)->color_pair);
 }
 
 static inline int
-get_line_attr(enum line_type type)
+get_line_attr(const char *prefix, enum line_type type)
 {
-	struct line_info *info = get_line_info(type);
+	struct line_info *info = get_line_info(prefix, type);
 
 	return COLOR_PAIR(COLOR_ID(info->color_pair)) | info->attr;
 }
