@@ -50,6 +50,7 @@ Improvements:
  - Allow Tig to be started with no default keybindings or built-in user-defined
    commands by running: `TIGRC_SYSTEM=~/.tigrc.safe tig`. (GH #235)
  - Open editor at line number for combined diffs e.g. diffs of unmerged files.
+ - Colors can be set for a specific view: `color stage.diff-add yellow default`
 
 Bug fixes:
 
